@@ -1,5 +1,6 @@
 Release 0.3.4 2020-02-11
 - rename sources *.pm -> *.rakumod
+- moved repo p6-css/CSS-Grammar-p6 -> css-raku/CSS-Grammar-raku
 Release 0.3.3 2019-10-14
 - [CSS::Grammar]
   -- Added case-sensitive <Id> token
